src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/feature-gate.stock.stderr
error[E0658]: `?const` on trait bounds is experimental
  --> $DIR/feature-gate.rs:13:29
   |
LL | const fn get_assoc_const<S: ?const T>() -> i32 { <S as T>::CONST }
   |                             ^^^^^^
   |
   = note: see issue #67794 <https://github.com/dust-lang/dust/issues/67794> for more information
   = help: add `#![feature(const_trait_bound_opt_out)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
